# people_rec

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  performance_results.json  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
src/: __init__.py  detection.py  test_performance.py
