[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "test_task"
version = "0.0.1"
description = "people recognition"
authors = [
  { name = "Artur_for_BND" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.9.0"


[tool.ruff]
line-length = 99
src = ["test_task"]
include = ["pyproject.toml", "test_task/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["test_task"]
force-sort-within-sections = true

